--- a/src/main/resources/static/projectSkeleton/css/home.css
+++ b/src/main/resources/static/projectSkeleton/css/home.css
@@ -33,6 +33,8 @@ body {
     overflow: auto;
     width: 100%;
     min-width: 650px;
+    height: 10vh;
+    min-height: 90px;
     align-items: center;
     display: flex;
 }
