--- a/src/main/resources/static/projectSkeleton/css/home.css
+++ b/src/main/resources/static/projectSkeleton/css/home.css
@@ -16,7 +16,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lato, Arial, sans-serif;
     height: 100%;
     width: 100%;
 
@@ -121,9 +121,12 @@ li::before {
     text-align: center;
 }
 
+
+
 body>footer {
     background-color: var(--black);
     width: 100%;
+    height: 5vh;
     display: flex;
     font-size: 16px;
     justify-content: space-around;
