catalog search - done remains: -sorting - by category - make a button that opens a pop-up -product cards -pagination(if necessary) - you can make a show more button and go up button that pops up when you scroll up

--- a/src/main/resources/static/projectSkeleton/css/home.css
+++ b/src/main/resources/static/projectSkeleton/css/home.css
@@ -13,10 +13,14 @@
     --dark-blue: rgb(54, 75, 179);
 }
 
+body, html {
+    font-weight: 400;
+    font-family: Lato, Arial, sans-serif;
+}
+
 body {
     margin: 0px;
     padding: 0px;
-    font-family: Lato, Arial, sans-serif;
     height: 100%;
     width: 100%;
 
@@ -29,7 +33,7 @@ body {
 #nav {
     font: bold 12px Arial, Helvetica, Sans-serif;
     background-color: var(--black);
-    border-bottom: 4px solid var(--dense-gold);
+    border-bottom: 4px solid var(--light-gold);
     overflow: auto;
     width: 100%;
     min-width: 650px;
