--- a/src/main/resources/static/projectSkeleton/css/catalog.css
+++ b/src/main/resources/static/projectSkeleton/css/catalog.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     margin: 0;
     padding: 0;
 }
@@ -30,6 +30,8 @@ body {
     height: 100%;
     width: 100%;
 
+    position: relative;
+    z-index: -1;
     background-color: var(--light-black);
 }
 
@@ -76,6 +78,7 @@ a {
 
 #nav ul {
     margin: 0 0 0 auto;
+    max-width: 50vw;
 }
 
 #nav ul li {
@@ -117,15 +120,14 @@ header.top {
     box-shadow: var(--dense-gold) 0px 7px 20px 0px;
     cursor: pointer;
     display: flex;
-    height: 3em;
+    height: 50px;
     left: 50%;
-    max-width: 20vw;
     overflow: hidden;
     padding: 0 0 0 0.5em;
     position: absolute;
     top: 50%;
-    transform: translate(-125%, -50%);
-    width: 40em;
+    transform: translate(-110%, -50%);
+    width: 400px;
     transition: all 0.25s;
 }
 .top .search {
@@ -151,10 +153,10 @@ header.top {
 }
 .top .input {
     opacity: 1;
-    z-index: 2;
+    z-index: 1;
 }
 
-.button {
+header .button {
     align-items: center;
     background: var(--dark-blue);
     border: 0;
@@ -169,7 +171,7 @@ header.top {
     cursor: pointer;
     min-width: 2.25vw;
 }
-.button::before {
+header .button::before {
     font-size: 1.5em;
     transition: all 0.25s;
 }
@@ -182,8 +184,71 @@ header.top {
     font-size: 2.5em;
 }
 
-#add li{
-    height: 20vh;
+#btn-back-to-top {
+    position: fixed;
+    bottom: 6vh;
+    right: 20px;
+    display: none;
+    color: var(--grey);
+    background-color: var(--dark-blue);
+    border-radius: 40%;
+}
+
+.modal-content{
+    background-color: var(--grey);
+}
+
+#openModalBtn{
+    background-color: var(--dark-blue);
+    border-color: transparent;
+}
+
+#saveSortBtn{
+    background-color: var(--dense-gold);
+    border-color: transparent;
+}
+
+#closeModalBtn{
+    background-color: var(--light-black);
+    border-color: transparent;
+}
+
+main{
+    position: relative;
+    z-index: -1;
+}
+
+#catalogCont{
+    background-color: transparent !important;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+}
+
+
+.productCard:hover{
+    transform: scale(1.03);
+}
+
+.productCard{
+    background-color: var(--dense-gold);
+}
+
+.productCard *{
+    color: var(--grey);
+}
+
+.cardBtn{
+    border-color: var(--light-black);
+    border-width: 2px;
+    margin: 2px;
+    border-radius: 10% !important;
+}
+
+.cardBtn:hover{
+    background-color: var(--light-black);
+    border-color: var(--light-black);
+    color: var(--light-gold);
+    transition: 0.5s;
 }
 
 body>footer {
