--- a/src/main/resources/static/projectSkeleton/css/home.css
+++ b/src/main/resources/static/projectSkeleton/css/home.css
@@ -11,6 +11,7 @@
     --light-gold: #DBAB4D;
     --grey: #efefef;
     --dark-blue: rgb(54, 75, 179);
+    --royal-red: #b75053;
 }
 
 body, html {
