--- a/src/main/resources/static/projectSkeleton/css/home.css
+++ b/src/main/resources/static/projectSkeleton/css/home.css
@@ -1,3 +1,7 @@
+@import "utils/navigation.css";
+@import "utils/footer.css";
+
+
 :root{
     /*--dark-blue:#05386B;*/
     /*--dark-green: rgb(55, 150, 131);*/
@@ -29,69 +33,17 @@ body {
     background-image: url('../images/background-pattern.webp');
     background-position: center center;
     background-repeat: repeat;
-}
-
-#nav {
-    font: bold 12px Arial, Helvetica, Sans-serif;
-    background-color: var(--black);
-    border-bottom: 4px solid var(--light-gold);
-    overflow: auto;
-    width: 100%;
-    min-width: 650px;
-    height: 10vh;
-    min-height: 90px;
     align-items: center;
-    display: flex;
-}
-
-#nav>ul a {
-    text-decoration: none;
-    color: var(--grey);
-    font-size: 20px;
-    font-weight: bolder;
-    position: relative;
-    margin: 18px;
-    padding: 4px 4px 5px 4px;
-    border: 2px solid transparent;
-}
-
-#nav>a {
-    border: 2px solid transparent;
-}
-
-#nav a:hover {
-    cursor: pointer;
-    color: var(--light-gold);
-    font-weight: bolder;
-    border: 2px solid var(--light-gold);
-    border-radius: 5px;
-}
-
-#nav ul {
-    margin: 0 0 0 auto;
-}
-
-#nav ul li {
-    display: inline;
-    margin: 0 2px;
-}
-
-li::before {
-    display: inline;
-}
-
-#nav>a>img {
-    width: 90px;
-    height: 80px;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
 }
 
 .card {
+    width: 40vw;
     max-width: 700px;
+    min-width: 208px;
     margin-top: 25vh;
-    margin-left: 30vw;
-    margin-right: 30vw;
+    left:30%;
+    /*margin-left: 30vw;*/
+    /*margin-right: 30vw;*/
     padding: 63px;
     text-align: center;
     background-color: var(--light-gold);
@@ -109,6 +61,7 @@ li::before {
     border-radius: 50px;
     align-self: center;
     width: 8vw;
+    min-width: 60px;
 }
 
 .store-link:hover {
@@ -124,25 +77,4 @@ li::before {
     width: 100%;
     padding: 5px;
     text-align: center;
-}
-
-
-
-body>footer {
-    background-color: var(--black);
-    width: 100%;
-    height: 5vh;
-    display: flex;
-    font-size: 16px;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0 5px 0 3px;
-    margin: 0%;
-    margin-top: 25%;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    text-align: center;
-    color: var(--grey);
-    font-weight: bold;
 }
