--- a/src/main/resources/static/projectSkeleton/css/home.css
+++ b/src/main/resources/static/projectSkeleton/css/home.css
@@ -21,6 +21,7 @@
 body, html {
     font-weight: 400;
     font-family: Lato, Arial, sans-serif;
+
 }
 
 body {
@@ -29,7 +30,7 @@ body {
     height: 100%;
     width: 100%;
 
-    background-color: var(--light-black);
+    background-color: var(--light-black) !important;
     background-image: url('../images/background-pattern.webp');
     background-position: center center;
     background-repeat: repeat;
@@ -37,18 +38,11 @@ body {
 }
 
 .card {
-    width: 40vw;
-    max-width: 700px;
-    min-width: 208px;
-    margin-top: 25vh;
-    left:30%;
-    /*margin-left: 30vw;*/
-    /*margin-right: 30vw;*/
-    padding: 63px;
-    text-align: center;
     background-color: var(--light-gold);
     border-radius: 20px;
     box-shadow: 4px 4px 5px 2px var(--black);
+    z-index: 0;
+    margin-top: 20vh;
 }
 
 .store-link {
@@ -60,9 +54,18 @@ body {
     border: 3px solid var(--dark-blue);
     border-radius: 50px;
     align-self: center;
-    width: 8vw;
+    width: 8vw !important;
+    display: inline-block;
     min-width: 60px;
 }
+
+@media (max-width: 450px) {
+    .card{
+        margin-top: 5vh;
+    }
+}
+
+
 
 .store-link:hover {
     cursor: pointer;
