--- a/src/main/resources/static/projectSkeleton/css/utils/navigation.css
+++ b/src/main/resources/static/projectSkeleton/css/utils/navigation.css
@@ -1,7 +1,13 @@
 #nav {
+    /*bootstrap reset*/
+    margin-bottom: 0;
+    border: none;
+
+    /*actual*/
     font: bold 12px Arial, Helvetica, Sans-serif;
     background-color: var(--black);
     border-bottom: 4px solid var(--light-gold);
+    border-radius: 0;
     overflow: auto;
     width: 100%;
     min-width: 650px;
@@ -9,6 +15,8 @@
 
     align-items: center;
     display: flex;
+    position: relative;
+    padding: 0;
 }
 
 #nav>ul a {
@@ -50,7 +58,7 @@ li::before {
 
 #nav>a>img {
     width: 90px;
-    height: 80px;
+    height: 75px;
     margin-left: 0.2em;
     margin-right: 0.2em;
 }
@@ -59,21 +67,122 @@ li::before {
     margin-left: 3px;
 }
 
-#hamburger{
+#menu-toggle{
     display: none;
     text-decoration: none;
     font-size: 2.75em;
     font-weight: bolder;
-    position: absolute;
-    padding: 4px 4px 5px 4px;
-    border: 2px solid transparent;
+    position: fixed;
+    padding: 11px 4px 5px 4px ;
+    border: 2px solid transparent ;
     background-color: transparent;
     color: var(--dense-gold);
     width: 90px;
-    height: 80px;
+    height: 75px;
     right:0;
+    margin-left: 0 !important;
     margin-right: 10px;
+}
 
+/*Sidebar*/
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-right: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    right: 250px;
+    width: 0;
+    height: 100%;
+    margin-right: -250px;
+    overflow-y: auto;
+    background-color: rgb(0,0,0,0.9);
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    align-items: center;
+    text-align: center;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 100%;
+}
+
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    line-height: 50px;
+    width: 100%;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+    width: 100vw;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav li a:active, .sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav>.sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav>.sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 0;
+    }
+    #wrapper.toggled {
+        padding-right: 250px;
+    }
+    #sidebar-wrapper {
+        width: 0;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+        width: 100%;
+    }
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+    #wrapper.toggled #page-content-wrapper {
+        position: fixed;
+        margin-right: 0;
+    }
 }
 
 header {
@@ -90,4 +199,18 @@ header {
 
 header.top {
     background: transparent;
+}
+
+@media (max-width: 1450px) {
+    #menu{
+        display: none;
+    }
+
+    #searchForm{
+        display: none;
+    }
+
+    #menu-toggle{
+        display: inline-block;
+    }
 }
