--- a/src/main/resources/static/projectSkeleton/css/utils/navigation.css
+++ b/src/main/resources/static/projectSkeleton/css/utils/navigation.css
@@ -72,7 +72,7 @@ li::before {
     text-decoration: none;
     font-size: 2.75em;
     font-weight: bolder;
-    position: fixed;
+    position: absolute;
     padding: 11px 4px 5px 4px ;
     border: 2px solid transparent ;
     background-color: transparent;
