--- a/src/main/resources/static/projectSkeleton/css/utils/navigation.css
+++ b/src/main/resources/static/projectSkeleton/css/utils/navigation.css
@@ -12,6 +12,7 @@
     width: 100%;
     min-width: 650px;
     height: 100px;
+    text-align: center;
 
     align-items: center;
     display: flex;
@@ -72,7 +73,7 @@ li::before {
     text-decoration: none;
     font-size: 2.75em;
     font-weight: bolder;
-    position: absolute;
+    position: fixed;
     padding: 11px 4px 5px 4px ;
     border: 2px solid transparent ;
     background-color: transparent;
@@ -80,6 +81,7 @@ li::before {
     width: 90px;
     height: 75px;
     right:0;
+    top: 10px;
     margin-left: 0 !important;
     margin-right: 10px;
 }
