--- a/src/main/resources/static/projectSkeleton/css/utils/defaults.css
+++ b/src/main/resources/static/projectSkeleton/css/utils/defaults.css
@@ -33,7 +33,12 @@ body {
     font-size: 1rem;
 }
 
+main{
+    position: sticky;
+    z-index: inherit;
+}
+
 a {
-    color: inherit;
-    text-decoration: none;
+    color: inherit ;
+    text-decoration: none !important;
 }
