--- a/src/main/resources/static/projectSkeleton/css/reviews.css
+++ b/src/main/resources/static/projectSkeleton/css/reviews.css
@@ -65,12 +65,6 @@
     right: 15px;
     z-index: 999;
 }
-.offer-dedicated-nav .nav-link.active,
-.offer-dedicated-nav .nav-link:hover,
-.offer-dedicated-nav .nav-link:focus {
-    border-color: #3868fb;
-    color: #3868fb;
-}
 .offer-dedicated-nav .nav-link {
     border-bottom: 2px solid #fff;
     color: #000000;
@@ -188,9 +182,6 @@
     height: 30px;
 }
 
-
-
-
 .bg-white{
     background-color: var(--light-black) !important;
     color: var(--grey) !important;
@@ -240,6 +231,24 @@
 #reveal-reviews:hover{
     color: var(--dark-blue);
     border: 2px solid var(--dark-blue);
+}
+
+#review-section{
+    margin-bottom: 50px !important;
+}
+
+.sort-by-rating:hover{
+    color: var(--royal-red);
+    border-bottom: 2px solid var(--royal-red);
+}
+
+.reviewer:hover{
+    color: var(--royal-red);
+}
+
+#review-rating{
+    width: 75px;
+    margin-bottom: 20px;
 }
 
 
