wishlist and navigation bug fixes

--- a/src/main/resources/static/projectSkeleton/css/catalog.css
+++ b/src/main/resources/static/projectSkeleton/css/catalog.css
@@ -164,9 +164,9 @@ a.card-link-wrap{
 
 .cardBtn{
     border-color: var(--light-black);
-    border-width: 2px;
+    border-width: 3px;
     margin: 5px;
-    border-radius: 10% !important;
+    border-radius: 7px !important;
 }
 
 .detailsBtn:hover{
