--- a/src/main/resources/static/projectSkeleton/css/utils/navigation.css
+++ b/src/main/resources/static/projectSkeleton/css/utils/navigation.css
@@ -12,13 +12,20 @@
     width: 100%;
     min-width: 650px;
     height: 100px;
+    min-height: 100px;
     text-align: center;
 
     align-items: center;
     display: flex;
     position: relative;
     padding: 0;
-    z-index: 1000;
+    z-index: -1;
+}
+
+@media (max-height: 400px) {
+    #nav{
+        position: fixed;
+    }
 }
 
 #nav>ul a {
