--- a/src/main/resources/static/projectSkeleton/css/orderDetails.css
+++ b/src/main/resources/static/projectSkeleton/css/orderDetails.css
@@ -1,6 +1,5 @@
 @import "utils/navigation.css";
 @import "utils/footer.css";
-@import "utils/backToTopBtn.css";
 @import "utils/defaults.css";
 
 .container{
@@ -18,7 +17,7 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: var(--grey);
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: 1rem;
