--- a/src/main/resources/static/projectSkeleton/css/account.css
+++ b/src/main/resources/static/projectSkeleton/css/account.css
@@ -24,6 +24,7 @@ main{
     -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     margin-top: 10vh;
+    margin-bottom: 100px;
     background-color: var(--light-black);
 }
 .panel-login>.panel-heading {
