--- a/src/main/resources/static/projectSkeleton/css/notifications.css
+++ b/src/main/resources/static/projectSkeleton/css/notifications.css
@@ -5,10 +5,22 @@
 @import "utils/defaults.css";
 
 .container{
-    max-width: 90vw !important;
-    width: 90vw !important;
+    max-width: 100vw !important;
+    width: 100% !important;
     margin-bottom: 100px;
+    padding: 0;
 }
+.col-md-10{
+    max-width: 100% ;
+    width: 80%;
+
+    flex:0 0 95%;
+}
+
+.d-flex{
+    margin: 0;
+}
+
 
 .cell-1 {
     border-collapse: separate;
@@ -18,12 +30,34 @@
     background-clip: padding-box;
 }
 
+
 thead {
     background: var(--royal-red);
     color: var(--light-gold);
+    text-align: center;
 }
 
-tbody>tr:hover{
+
+.content:hover{
     cursor: pointer;
     background-color: rgb(227, 224, 224);
+}
+
+tbody>tr>td>a{
+    display: block;
+    width: 100%;
+    height: 51px;
+}
+
+tbody>tr>td>a:hover{
+    color: var(--royal-red) !important;
+}
+
+.content{
+    width: 80%;
+}
+
+.date{
+    width: 20%;
+    text-align: center;
 }
